Bug 107134 - Filter navigator can not read operators.
Summary: Filter navigator can not read operators.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
5.3.2.2 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:6.1.0 target:6.0.2
Keywords:
Depends on:
Blocks:
 
Reported: 2017-04-13 08:55 UTC by Eigil Wiwe
Modified: 2018-02-22 14:27 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
This file is a base with a table and a qustins and a formular. The has text that explane the error. (14.12 KB, application/vnd.sun.xml.base)
2017-04-14 14:18 UTC, Eigil Wiwe
Details
Formularfile i writer (14.95 KB, application/vnd.oasis.opendocument.text)
2017-04-14 14:28 UTC, Eigil Wiwe
Details
This file is nearly the same as that in 132566 but changed a little (14.33 KB, application/vnd.sun.xml.base)
2017-05-16 07:30 UTC, Eigil Wiwe
Details
Formularfile i writer the same as 132567 but changed a little (15.32 KB, application/vnd.oasis.opendocument.text)
2017-05-16 07:37 UTC, Eigil Wiwe
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Eigil Wiwe 2017-04-13 08:55:13 UTC
The Filternavigator can not read operators. Thes means that when opening the file navigator and close it egain will remove all operaters from all the formulators in the open file. 

I see this file in Libreoffice 5.3.1 and 5.3.2. It is a new error.
I use windows 10 and open libreoffice base from a writer dokument.

When opening the filter navigator, where a filter should have been set as “>DATE”, the filter only shows “DATE” without the operator “>”. 

Luke a litle like error 96370
Comment 1 Alex Thurgood 2017-04-13 10:38:10 UTC
@Eigil : please provide a test database and detailed instructions for reproduction, otherwise we are just guessing how your forms are set up with the filters.
Comment 2 Eigil Wiwe 2017-04-14 14:18:34 UTC
Created attachment 132566 [details]
This file is a base with a table and a qustins and a formular. The has text that explane the error.
Comment 3 Eigil Wiwe 2017-04-14 14:28:29 UTC
Created attachment 132567 [details]
Formularfile i writer

I am a bit confusesed.
it was error 107134
now I see a number 132566 for the file i just send.
The file I am sending here is the same formular but shall use the base in the file I send before.
Comment 4 Eigil Wiwe 2017-05-12 07:38:46 UTC
I have just tested the filter error on LibreOffice 5.3.3.2.
The error is still the same. The filter can not read operators.
Comment 5 Alex Thurgood 2017-05-12 08:42:54 UTC
Confirming with

Version: 5.4.0.0.alpha0+
Build ID: 55833ef28adb67a34a61f545219f9ba9a7c1a4e5
CPU threads: 2; OS: Mac OS X 10.12.4; UI render: default; 
Locale: fr-FR (fr_FR.UTF-8); Calc: group
Comment 6 Julien Nabet 2017-05-14 07:22:54 UTC
Sorry I can't help here since I don't even see the 3 lines when opening odt file.
About base file, I see a filter navigator but don't see a place this juste "DATE".
Comment 7 Eigil Wiwe 2017-05-15 08:20:06 UTC
You said:  "I don't even see the 3 lines when opening odt file."


To see anything on this file you need to register the database “Test navigator” as “Test navigator”. If you forgot to do this, you will only see an empty table.
The path in danish (sory) "Funktioner/Indstillinger/LibreOffice base/Databaser/Ny"

If you only see a date when you open the filter navigator in The base formula
 This is the error. Because you ought to see " > Date "
Comment 8 Eigil Wiwe 2017-05-16 07:18:00 UTC
(In reply to Eigil Wiwe from comment #7)
> You said:  "I don't even see the 3 lines when opening odt file."
> 
> 
> To see anything on this file you need to register the database “Test
> navigator” as “Test navigator”. If you forgot to do this, you will only see
> an empty table.
> The path in danish (sory) "Funktioner/Indstillinger/LibreOffice
> base/Databaser/Ny"
> 
> If you only see a date when you open the filter navigator in The base formula
>  This is the error. Because you ought to see " > Date "
Comment 9 Eigil Wiwe 2017-05-16 07:30:51 UTC
Created attachment 133350 [details]
This file is nearly the same as that in 132566 but changed a little

Be sure the tool-line ”Formularnavigation” is set.
Here you see three lines with birthdays and names.
I have set the filter to ”  > #1-8-2017#   ” therefor you see this three lines
Open the Filter navigator. Notice what the filternavigator shows and do not do anything, but close the Filternavigator.
Luke at the table it now shows one line with birthday and name, but none off this before. The filter has changed.

And now again open the Filenavigator and change the filter settings bay adding the operator > to the date( > #1-8-2017#  ). And close the filternavigator.
And now you see the same three line as first showed. The filter has changed back.

This shows you can not read the ’  >   ’, but if you write it in the filter-navigator, you can save it.
Comment 10 Eigil Wiwe 2017-05-16 07:37:52 UTC
Created attachment 133351 [details]
Formularfile i writer the same as 132567 but changed a little

To see anything on this file you need to register the database “Test navigator v1” as “Test navigtor v1”. If you forgot to do this, you will only see an empty table.
Write protect this file before open it.
The path in danish (sory) "Funktioner/Indstillinger/LibreOffice base/Databaser/Ny"
Be sure the tool-line” Formularnavigation” is set.
Here you see three lines with birthdays and names.
I have set the filter to ”  > #1-8-2017#   ” therefor you see this three lines
Open the Filter navigator. Notice what the filternavigator shows and do not do anything, but close the Filternavigator.
Luke at the table it now shows one line with birthday and name, but none off this before. The filter has changed.

And now again open the Filenavigator and change the filter settings bay adding the operator > to the date( > #1-8-2017#  ). And close the filternavigator.
And now you see the same three line as first showed. The filter has changed back.

This shows you can not read the ’  >   ’, but if you write it in the filter-navigator, you can save it.


NB: Looking up in the database “Test navigator v1” you shall see in the formula and open it to try see the error.
Comment 11 Eigil Wiwe 2017-05-16 07:47:38 UTC
(In reply to Julien Nabet from comment #6)
> Sorry I can't help here since I don't even see the 3 lines when opening odt
> file.
> About base file, I see a filter navigator but don't see a place this juste
> "DATE".

I think there is same mistake here, so I uploud 2 new files to better show what I try to tell. It is best to writeprotect the odt file before open it.
Comment 12 Julien Nabet 2018-01-25 10:15:39 UTC
On pc Debian x86-64 with master sources updated yesterday, I could reproduce most of this.
The only thing I don't reproduce is when I open filter form navigator and close it, the filter is still ok.

However, if I open the filter form navigator, I confirm ">" doesn't appear and obviously if I click apply, LO considers like there was an "=".
Comment 13 Julien Nabet 2018-01-25 13:58:37 UTC
I tried to unwind on gdb and it seems that the root cause is in https://opengrok.libreoffice.org/xref/core/svx/source/form/formcontroller.cxx#3172
Indeed, we use pRefValues[j].Value which contains "#08/01/2017#" but not pRefValues[j].Handle which contains the operator

I gave it a try with https://gerrit.libreoffice.org/#/c/48609/
Comment 14 Eigil Wiwe 2018-02-12 17:41:54 UTC
(In reply to Julien Nabet from comment #12)
> However, if I open the filter form navigator, I confirm ">" doesn't appear
> and obviously if I click apply, LO considers like there was an "=".




Yes I see this is the error I tried to describe.
I have to use the word “Append” instead of “Close” in my explantation. 

When I tested version 6.0.1.1 of LibreOffice the error is there still.
Comment 15 Commit Notification 2018-02-13 19:35:44 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=819ba42b3409bd2f66593f619f1934ea7f461364

tdf#107134: add comparator in form filter

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Commit Notification 2018-02-22 13:45:00 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=074cda388a8c378f3ab433c1f4a5f086b4dcd67e&h=libreoffice-6-0

tdf#107134: add comparator in form filter

It will be available in 6.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.