tdf#107134: add comparator in form filter

Change-Id: I86d3b5c4ebd231bdad70dc9f5a364658cfca6df4
Reviewed-on: https://gerrit.libreoffice.org/48609
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>